--- a/Projekt_KWDM/src/Pacs/PACS.API/PACS.API.csproj
+++ b/Projekt_KWDM/src/Pacs/PACS.API/PACS.API.csproj
@@ -2,15 +2,20 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.1" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <Reference Include="gdcm-sharp">
-      <HintPath>..\..\..\..\..\..\Semestr_2\MSI\GDCM_@\GDCM 3.0\lib\gdcm-sharp.dll</HintPath>
+      <HintPath>..\..\..\bin\Debug\gdcm-sharp.dll</HintPath>
     </Reference>
   </ItemGroup>
 
